@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.5"
-#define RUBY_RELEASE_DATE "2007-02-26"
+#define RUBY_RELEASE_DATE "2007-02-27"
 #define RUBY_VERSION_CODE 185
-#define RUBY_RELEASE_CODE 20070226
-#define RUBY_PATCHLEVEL 21
+#define RUBY_RELEASE_CODE 20070227
+#define RUBY_PATCHLEVEL 22
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 5
 #define RUBY_RELEASE_YEAR 2007
 #define RUBY_RELEASE_MONTH 2
-#define RUBY_RELEASE_DAY 26
+#define RUBY_RELEASE_DAY 27
 
 RUBY_EXTERN const char ruby_version[];
 RUBY_EXTERN const char ruby_release_date[];
